tests/specs/node/dynamic_import_and_require_dual/resolution_mode_require_jsdoc.out
Check file:///[WILDLINE]/resolution_mode_require_jsdoc.js
TS2345 [ERROR]: Argument of type '"value"' is not assignable to parameter of type '"cjs"'.
log("value");
    ~~~~~~~
    at file:///[WILDLINE]/resolution_mode_require_jsdoc.js:12:5

error: Type checking failed.
